<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/new_medicine"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/medicine_name"
            android:textColor="@color/blue"/>

        <EditText
            android:id="@+id/et_medicineName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/edit_bkgd"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:hint="@string/enter_medicine"
            android:textColorHint="#81000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicine_type"
            android:textColor="@color/blue"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remainder_time"
            android:textColor="@color/blue"/>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:timePickerMode="spinner"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/submit"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_margin="15dp"/>

    </LinearLayout>
    </LinearLayout>
</ScrollView>